--- a/ajax/css/index.css
+++ b/ajax/css/index.css
@@ -1,20 +1,25 @@
-table, th,td{
-    border:1px solid;
+table, th, td {
+    border: 1px solid;
 }
 table{
     width:100%
 }
-.overlay{
-    opacity:0.8;
+
+.overlay{    
     background-color:#ccc;
     position:fixed;
     width:100%;
     height:100%;
     top:0px;
     left:0px;
-    z-index:1000;  
+    z-index:1000;    
 }
 
 .close{
     display:none
+}
+
+#showMap {
+    height: 600px; /* The height is 400 pixels */
+    width: 100%; /* The width is the width of the web page */
 }
