--- a/product/public/css/index.css
+++ b/product/public/css/index.css
@@ -56,6 +56,15 @@
     grid-area:footer;
 }
 
+form .alert{
+    color:red;
+    font-size: 0.8em;
+}
+
+form .close{
+    display: none;
+}
+
 /*手機橫的*/
 @media (min-width: 576px) {  }
 
